# lit-wallet

./: README.md  docker-compose.yml  pyproject.toml
api/: main.py
api/database/: database.py  seeds.py
api/public/transaction/: models.py
api/public/user/: models.py
api/public/wallet/: models.py
docs/: tools.md
lit-api/: main.py
lit-api/api/: __init__.py
lit-api/api/controller/: user.py
lit-api/database/: database.py  seeds.py
lit-api/public/transaction/: models.py
lit-api/public/user/: crud.py  models.py  views.py
lit-api/public/wallet/: models.py
lit-app/: README.md  main.py  pyproject.toml
shared/database/: database.py  seeds.py
shared/database/orm/user/: crud.py  model.py
streamlit-app/: main.py  secrets.toml
