[tool.poetry]
name = "data-api"
version = "0.1.0"
description = ""
authors = ["Pedro Frattezi Silva <pfrattezi@able.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.31.1"
numpy = "^1.26.4"
pandas = "^2.2.0"
sqlmodel = "^0.0.14"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
black = "^24.2.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
